make logo colors adjustable via skin

--- a/internal/config/templates/stock-skin.yaml
+++ b/internal/config/templates/stock-skin.yaml
@@ -8,6 +8,9 @@ k9s:
     fgColor: cadetblue
     bgColor: black
     logoColor: orange
+    iconColor1: blue
+    iconColor2: red
+    iconColor3: lightblue
     logoColorMsg: white
     logoColorInfo: green
     logoColorWarn: mediumvioletred
